# install-chroma

./: .gitignore  CMakeLists.txt  Makefile  README.md  env.sh
install-all/: Makefile
install-usqcd/: Makefile
python/: CMakeLists.txt  chroma_api.i  lime_api.i  quda_api.i  setup.py.in  xpath_reader.i
python/pyusqcd/: __init__.py  lime_contents.py  print_xpath.py
src/: CMakeLists.txt  chroma_api.cpp  chroma_api.h  chroma_types.h  clime_reader.cpp  clime_reader.h  clime_record_header.h  clime_utils.cpp  clime_utils.h  clime_writer.cpp  clime_writer.h  quda_color_spinor_field.h  quda_host_utils.h  quda_swig.h
tests/: CMakeLists.txt  Makefile  test_chroma_api.cpp  test_clime_reader.cpp  test_clime_writer.cpp
